Removed faulty service re-register during delayed component configuration. Fixed reference DTOs for getComponentDTOs. Code clean-up.